# bitghetti

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
engine/: camera.h  core.h
engine/_config/: keybinds.toml
engine/ecs/: manager.h
engine/ecs/component/: component.h
engine/ecs/entity/: entity.h
engine/entity/: cube.h  entity.h
engine/event/: event.cpp  event.h
engine/renderer/: graphics_context.h  opengl_context.cpp  opengl_context.h  renderer.h  shader.h
engine/scene/: scene.cpp  scene.h
engine/window/: context_window.h  glfw_window.cpp  glfw_window.h  window_factory.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: mouse_pick.frag  screen.frag  screen.vert  test.frag
